made some alignment fixes on the main screen

--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -365,7 +365,7 @@ body {
         font-size: 24px;
         border: 1px solid #999;
         padding: 8px;
-        margin-left: 20px;
+        margin-left: -70px;
     }
 }
 
@@ -536,7 +536,7 @@ body {
 #task-list {
     list-style: none;
     margin: 30px 0;
-    margin-left: 20px;
+    margin-left: -70px;
     padding: 0;
     width: 101%;
 
